--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-uncss": "^0.17.0"
   },
   "dependencies": {
-    "dayjs": "^1.8.19"
+    "dayjs": "^1.8.19",
+    "shifty": "^2.8.3"
   }
 }
