--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "predeploy": "parcel build src/index.html",
+    "build": "parcel build src/index.html",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
