--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -e pa"
   },
   "keywords": [],
   "author": "",
