--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
+    "ghpage": "parcel build src/index.html --public-url ./",
     "deploy": "gh-pages -d dist -e pa"
   },
   "keywords": [],
