--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "gh-pages": "^2.2.0",
+    "parcel-bundler": "^1.12.4",
     "postcss-uncss": "^0.17.0"
   },
   "dependencies": {
